Fix alignment of header

--- a/style.scss
+++ b/style.scss
@@ -33,7 +33,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: $darkerGray;
-  font-weight: bold;
+  // font-weight: bold;
 
   line-height: 1.7;
   margin: 1em 0 15px;
@@ -151,6 +151,7 @@ img {
 
 .wrapper-masthead {
   margin-bottom: 50px;
+  border-bottom: 1px solid #ddd;
 }
 
 .masthead {
@@ -190,7 +191,7 @@ img {
 }
 
 .site-name {
-  margin: 0;
+  margin: 23px 0px 0px;
   color: $darkGray;
   cursor: pointer;
   font-family: $helveticaNeue;
